# kimi-code-switch

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  kimi-code-switch.py  pyproject.toml  run_panel.py
.github/workflows/: release-homebrew.yml
pyinstaller_hooks/: hook-textual.py
scripts/: render_homebrew_formula.py
src/kimi_code_switch/: __init__.py  __main__.py  _toml.py  config_store.py  panel_settings.py  preview.py  themes.py  toml_utils.py  tui.py  tui_forms.py  tui_navigation.py  widgets.py
tests/: test_config_store.py
