[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-code-switch"
version = "0.1.0"
description = "Terminal UI for managing kimi-code-cli providers, models, and profiles."
requires-python = ">=3.11"
dependencies = [
  "textual>=8.2,<9"
]
readme = "README.md"
authors = [
  { name = "Codex" }
]

[project.scripts]
kimi-config-panel = "kimi_code_switch.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
