[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-code-switch"
version = "0.1.0"
description = "Terminal UI for managing kimi-code-cli providers, models, and profiles."
requires-python = ">=3.9"
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
  "textual>=8.2,<9"
]
readme = "README.md"
authors = [
  { name = "Codex" }
]

[project.scripts]
kimi-code-switch = "kimi_code_switch.__main__:kimi_code_switch"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
